...
    "search":"Search",
    "confirm_password":"Confirm Password",
    "forgot_password":"Forgot your password?",
    "reset_password":"Reset password",    
    "reenter_password":"Re-enter password",
    "new_password":"New pasword",
    "invalid_email":"Invalid email!",
    "invalid_password":"Password is too short!",
    "invalid_password_reenter":"Passwords did not match. Try again.",
    "invalid_first_name":"Invalid first name",
    "invalid_last_name":"Invalid last name",
    "create_an_account":"Create an Account",
    "first_name":"First Name",
    "last_name":"Last Name",
...
