...
          Padding(
            padding: const EdgeInsets.symmetric(
                horizontal: Dimens.mp, vertical: Dimens.mp),
            child: Row(
              children: [
                InkWell(
                  key: Key('forgot_password_back'),
                  onTap: () => Navigator.of(context).pop(),
                  child: Row(children: [
                    const Icon(Icons.arrow_back),
                    Padding(
                      padding: const EdgeInsets.only(left: Dimens.sp),
                      child: Text(S.of(context).back),
...
